--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-skillbars": "^1.6.1",
+    "react-spinners": "^0.10.6",
     "react-typed": "^1.2.0",
     "recharts": "^2.0.9",
     "simple-react-lightbox": "^3.6.6",
